metadata/force-app/main/default/objects/CustomName_INtDG__c/CustomName_INtDG__c.object-meta.xml
<CustomObject>
    <description>Description_cYVDE</description>
    <label>CustomLabel_MeyGO</label>
    <nameField>
        <label>CustomLabel_MeyGO</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_MeyGOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>