metadata/force-app/main/default/objects/CustomName_INtDG__c/fields/CustomField_KnWXN__c.field-meta.xml
<CustomField>
    <fullName>CustomField_KnWXN__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldLuTBz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>